body scroll and speciality card visible fix

--- a/Noname/Abitcareer.Web/Content/Home.css
+++ b/Noname/Abitcareer.Web/Content/Home.css
@@ -1,4 +1,17 @@
-﻿.highcharts-title
+﻿body
+{
+    overflow-y: hidden;
+}
+
+@media (max-height: 550px)
+{
+    body
+    {
+        overflow-y: scroll;
+    }
+}
+
+.highcharts-title
 {
     font-size: small !important;
 }
